# typelist

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  temp  temp.cpp  typelist  usage_example.cpp
lib/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  if_then_else.hpp  typelist.hpp
